--- a/src/component/navbar/NavBar.scss
+++ b/src/component/navbar/NavBar.scss
@@ -1,34 +1,84 @@
-.navBar{
-    height: 50px;
-    background-color: #003580;
+.navBar {
+  height: 50px;
+  background-color: #003580;
+  display: flex;
+  justify-content: center;
+
+  .navContainer {
+    width: 100%;
+    max-width: 1024px;
+    color: #fff;
     display: flex;
-    justify-content: center;
+    align-items: center;
+    justify-content: space-between;
 
-    .navContainer{
-        width: 100%;
-        max-width: 1024px;
-        color: #fff;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
+    .logoWrapper {
+      color: inherit;
+      text-decoration: none;
 
-        .logoWrapper{
-            color: inherit;
-            text-decoration: none;
-            
-            .logo{
-                font-weight: 500;
-            }
-        }
-        
-        .navItems{
-            .navbutton{
-                margin-left: 20px;
-                border: none;
-                padding: 5px 10px;
-                cursor: pointer;
-                color: #003580;
-            }
-        }
+      .logo {
+        font-weight: 500;
+      }
     }
+
+    .navItems {
+      .navbutton {
+        margin-left: 20px;
+        border: none;
+        padding: 5px 10px;
+        cursor: pointer;
+        color: #003580;
+      }
+    }
+    .rightItems {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 10px;
+
+      .avatar {
+        width: 35px;
+        height: 35px;
+        border-radius: 50%;
+      }
+
+      .username {
+        font-size: 18px;
+        font-weight: 500;
+        color: #f1f1f1;
+        text-transform: capitalize;
+      }
+
+      .icon{
+        font-size: 16px;
+        color: #f1f1f1;
+        cursor: pointer;
+      }
+    }
+  }
+
+  .dropdown {
+    position: absolute;
+    top: 40px;
+    right: 70px;
+    width: 100px;
+    background-color: white;
+    border: 1px solid rgba(0, 0, 139, 0.596);
+    border-radius: 5px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    padding: 5px 0px;
+    z-index: 1000;
+
+    .dropdownItem {
+      padding: 10px;
+      cursor: pointer;
+
+      &:hover {
+        background-color: #f1f1f1;
+      }
+    }
+  }
+  .dropdown.open {
+    display: block;
+  }
 }
